feat: API 추가 구현 (#117)